--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.mvc}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
